<resources>
    <string name="app_name">Ticketing_App</string>
    <string name="enter_details">Enter Details</string>
    <string name="card_holder_s_name">Card Holder\'s Name</string>
    <string name="card_number">Card Number</string>
    <string name="expiration_date">Expiration Date</string>
    <string name="cvv">CVV</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="add">Add</string>
    <string name="dashboard">Dashboard</string>
    <string name="account_balance">Account Balance</string>
    <string name="_4586_99">4586.99</string>
    <string name="lkr">LKR</string>
    <string name="top_up">Top up</string>
    <string name="transaction_history">Transaction History</string>
    <string name="journey_history">Journey History</string>
    <string name="payment_method">Payment Method</string>
    <string name="my_profile">My Profile</string>
    <string name="log_out">Log out</string>
    <string name="payment">Payment</string>
    <string name="full_name">Full Name :</string>
    <string name="chamod_kodithuwakku">Chamod Kodithuwakku</string>
    <string name="cn">Card Number :</string>
    <string name="dum_card">4532 1302 1550 3933</string>
    <string name="expiry_date">Expiry Date :</string>
    <string name="dum_date">02/29</string>
    <string name="cv">CVV :</string>
    <string name="dum_cvv">389</string>
    <string name="mobile_num">Mobile Number :</string>
    <string name="dum_phn">+94 779 342 389</string>
    <string name="edit">Edit</string>
    <string name="delete_details">Delete Details?</string>
    <string name="delete">Delete</string>
    <string name="departure">Departure :</string>
    <string name="arrival">Arrival :</string>
    <string name="log_in">Log in</string>
    <string name="log_in_first_to_proceed">Log in first to proceed</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
</resources>