<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="?actionBarSize"
    android:layout_marginBottom="?actionBarSize"
    tools:context=".DisplayPaymentActivity">

    <ImageView
        android:id="@+id/back_btn_displayPayment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/back_button"
        app:layout_constraintBottom_toTopOf="@+id/guideline1"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:tint="#303030" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="-5dp"
        android:text="@string/payment"
        android:textColor="#303030"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/guideline1">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:layout_editor_absoluteY="351dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/full_name"
                android:textColor="#99606060"
                android:textSize="14sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/display_payment_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="end"
                android:text="@string/chamod_kodithuwakku"
                android:textColor="#CC303030"
                android:textSize="18sp"
                android:textStyle="italic|bold" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            tools:layout_editor_absoluteY="351dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/cn"
                android:textColor="#99606060"
                android:textSize="14sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/display_payment_card_num"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="end"
                android:text="@string/dum_card"
                android:textColor="#CC303030"
                android:textSize="18sp"
                android:textStyle="italic|bold" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            tools:layout_editor_absoluteY="351dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/expiry_date"
                android:textColor="#99606060"
                android:textSize="14sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/display_payment_expiry_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="end"
                android:text="@string/dum_date"
                android:textColor="#CC303030"
                android:textSize="18sp"
                android:textStyle="italic|bold" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            tools:layout_editor_absoluteY="351dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/cv"
                android:textColor="#99606060"
                android:textSize="14sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/display_payment_cvv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="end"
                android:text="@string/dum_cvv"
                android:textColor="#CC303030"
                android:textSize="18sp"
                android:textStyle="italic|bold" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            tools:layout_editor_absoluteY="351dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/mobile_num"
                android:textColor="#99606060"
                android:textSize="14sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/display_payment_mobile_num"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="end"
                android:text="@string/dum_phn"
                android:textColor="#CC303030"
                android:textSize="18sp"
                android:textStyle="italic|bold" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/update_displayPayment"
            android:layout_width="130dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:background="@drawable/gradient_btn_bg_45deg"
            android:text="@string/edit"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="-5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete_details"
                android:textColor="#99303030" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/delete_payment_btn"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="-3dp"
                android:background="@android:color/transparent"
                android:text="@string/delete"
                android:textAllCaps="false"
                android:textColor="#99FF0000" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05" />

</androidx.constraintlayout.widget.ConstraintLayout>