<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/login_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/log_in"
            android:textStyle="bold"
            android:textSize="34sp"
            android:textColor="@color/white"
            android:layout_marginTop="60dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="2dp"
            android:text="@string/log_in_first_to_proceed"
            android:textSize="12sp"
            android:textStyle="bold"
            android:textColor="#B3F5F5F5"/>

        <EditText
            android:id="@+id/login_username"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="50dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:inputType="textEmailAddress"
            android:hint="@string/username"
            android:textColorHint="#B3F5F5F5"
            android:textSize="16sp"
            android:background="@drawable/stroke_white"/>

        <EditText
            android:id="@+id/login_pw"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="28dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:textColorHint="#B3F5F5F5"
            android:textSize="16sp"
            android:background="@drawable/stroke_white"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:text="@string/log_in"
            android:textSize="16sp"
            android:textStyle="bold"
            android:background="@drawable/btn_lg_bg"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="?actionBarSize"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/don_t_have_an_account"
                android:textColor="#B3F5F5F5" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/not_a_member_btn"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/sign_up"
                android:textColor="#E6F5F5F5"
                android:textAllCaps="false"
                android:background="@android:color/transparent" />


        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>